--- a/public/tarefas/composer.json
+++ b/public/tarefas/composer.json
@@ -10,7 +10,12 @@
         "mobiledetect/mobiledetectlib": "2.*",
         "cakephp/migrations": "~1.0",
         "cakephp/plugin-installer": "~1.0",
-        "cakephp-brasil/twitter-bootstrap": "^1.0"
+        "cakephp-brasil/twitter-bootstrap": "^1.0",
+        "components/jquery": "^3.2",
+        "jquery-form/form": "^4.2",
+        "components/jqueryui": "^1.12",
+        "holt59/cakephp3-bootstrap-helpers": "dev-master",
+        "oldskool/cakephp-js": "dev-master"        
     },
     "require-dev": {
         "psy/psysh": "@stable",
